--- a/index.html
+++ b/index.html
@@ -4,29 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Project</title>
+    <script src="https://kit.fontawesome.com/337be747ec.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <header>
-        <div>
-            <h1>My Awesome Restaurant</h1>
+    <header class="site.init">
+        <div class="navigation-bar">
+            <div>
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            <div>
+                <h1>Lorem</h1>
+            </div>
+            <nav class="menu">
+                <a class="link-selected" href="index.html">Home</a>
+                <a href="menu.html">Menu</a>
+                <a href="go.html">To Go</a>
+            </nav>
+            <div>
+                <i class="fa-solid fa-cart-arrow-down"></i>
+            </div>
         </div>
     </header>
-    <section>
-        <h2>Welcome to your favorite place</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur unde, suscipit alias at tempora veritatis quidem beatae voluptatibus, eaque cumque perspiciatis voluptas dolorum inventore illo sapiente adipisci culpa saepe asperiores.</p>
-            <div>
-                <h5>Our Menu:</h5>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Dish name</th>
-                            <th>Description</th>
-                            <th>Price</th>
-                        </tr>
-                    </thead>
-                </table>
+
+    <main>
+        <div class="dish-month-container">
+            <div class="dish-month-img">
+                <img src="Healthy-Cobb-Salad-3.jpg" alt="">
             </div>
-    </section>
+            <div class="dish-month-text">
+                <h2>Healthy Salad</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, vitae deleniti. In dolores repudiandae aut?</p>
+                <div class="text-flex">
+                    <p>$39.0</p>
+                    <a class="btn" href="#">Order Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="all-dishes-container">
+            <!--Best Sellers-->
+            <div class="dish-container">
+                <img src="" alt="">
+                <p>$3.00</p>
+                <h3>title</h3>
+                <p>best in</p>
+            </div>
+
+            <div class="dish-container">
+                <img src="" alt="">
+                <p>$3.00</p>
+                <h3>title</h3>
+                <p>best in</p>
+            </div>
+
+            <div class="dish-container">
+                <img src="" alt="">
+                <p>$3.00</p>
+                <h3>title</h3>
+                <p>best in</p>
+            </div>
+
+            <div class="dish-container">
+                <img src="" alt="">
+                <p>$3.00</p>
+                <h3>title</h3>
+                <p>best in</p>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
