Class #4 My Project

--- a/go.html
+++ b/go.html
@@ -28,9 +28,9 @@
     </header>
     <main class="container">
         <div class="form-flex">
-            <section class="form-img">
-                <img src="Healthy-Cobb-Salad-3.jpg" alt="">
-            </section>
+            <div class="form-img">
+                <img src="Healthy-Cobb-Salad-3.jpg" alt="Healthy Cobb Salad">
+            </div>
             <section class="form-container">
                 <h2>Product title</h2>
                 <form action="">
